--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Projekti 1 Work</title>
+        <title>Projekti 1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -11,32 +11,29 @@
     </head>
     <body>
 
-    <!-- Lisätään navigaatio sivun reunaan -->
+    <!-- Lisätään sivupalkki sivun reunaan -->
     <div class="sidebar">
         <div class="logo-details">
             <i class='bx bx-grid-alt'></i>
             <div class="logo_name">To Do List</div>
-            <i class='bx bx-menu' id="btn" ></i>
         </div>        
     </div>
-    <section class="home-section">
-        <div class="text">Päivämäärä</div>
-    </section>
         
 	<div id= "MyDiv1" class= header>
         <br>
         <br>
         <h2 class= p2>To Do List</h2>
-        <h3 style='font-size:24px'>(Work and freetime related things)</h3>
-    </div>
+        <h3 style='font-size:24px'>(For work and freetime related things)</h3>
+  </div>
+  <br>
 	
 	<!-- Lisätään lista tehtäville -->
     <ul class= p3 id= "MyUL">
-        <li class="checked">Syötettävät asiat listaksi.</li>
+        <li>Syötettävät asiat listaksi.</li>
         <li>Virheellisen syötteen tarkistus.</li>
         <li>Virheilmoitus ja kentän korostus.</li>
         <li>Elementtien poisto ja merkintä valmiiksi.</li>
-        <li>HTML, CSS ja JavaScript eri tiedostoihin.</li>
+        <li class="checked">HTML, CSS ja JavaScript eri tiedostoihin.</li>
         <li>Tietojen tallennus selaimeen.</li>
     </ul>	
 			
@@ -48,7 +45,16 @@
 
 	<!-- Lisätään mahdollisuus lisätä tehtäviä listaan -->
     <footer class="rounded">
-        <span onclick="newElement()" class="addBtn">Lisää</span>
+        <!-- <span onclick="newElement()" class="addBtn">Lisää</span> -->
+
+        <button class="learn-more">
+          <span onclick="newElement()"></span>
+          <span aria-hidden="true" class="circle">
+          <span class="icon arrow"></span>
+          </span>
+          <span class="button-text">Lisää</span>
+        </button>
+
         <input type="text" id="myInput" placeholder="Lisää tehtävä...">
 	  </footer>
 	
