--- a/index.html
+++ b/index.html
@@ -39,23 +39,41 @@
 			
 	<br>
 	<br>
+  
+  <!-- Lisätään mahdollisuus lisätä tehtäviä listaan -->
+  <div id= "MyDiv2">
+    
+    <button class="learn-more">
+      <span onclick="newElement()" class="addBtn"></span>
+      <span aria-hidden="true" class="circle">
+      <span class="icon arrow"></span>
+      </span>
+      <span class="button-text">Lisää</span>
+    </button>
+
+    <input type="text" id="myInput1" placeholder="Lisää tehtävä...">     
+  </div>
+
+  <div id= "MyDiv3">
+    <br>
+    <form action="">
+    <button class="learn-more">
+      <span onclick="newElement()" id="display-btn"></span>
+      <span aria-hidden="true" class="circle">
+      <span class="icon arrow"></span>
+      </span>
+      <span class="button-text">Näytä</span>
+    </button>
+    </form>
+  </div>
 
     <script src="App.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-	<!-- Lisätään mahdollisuus lisätä tehtäviä listaan -->
+    <br>
+    <br>
     <footer class="rounded">
-        <!-- <span onclick="newElement()" class="addBtn">Lisää</span> -->
-
-        <button class="learn-more">
-          <span onclick="newElement()"></span>
-          <span aria-hidden="true" class="circle">
-          <span class="icon arrow"></span>
-          </span>
-          <span class="button-text">Lisää</span>
-        </button>
-
-        <input type="text" id="myInput" placeholder="Lisää tehtävä...">
+      Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2021, Aino Lyly. Unless otherwise mentioned.  
 	  </footer>
 	
     </body>
